tests/manifests/ingressclass.yaml
apiVersion: networking.k8s.io/v1
kind: IngressClass
metadata:
  name: example-ingressclass
  annotations:
    ingressclass.kubernetes.io/is-default-class: "true"
spec:
  controller: example-ingress/controller
