tests/manifests/mutatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingAdmissionPolicyBinding
metadata:
  name: example-mutatingadmissionpolicybinding
spec:
  policyName: example-mutatingadmissionpolicy
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: prod
