tests/manifests/mutatingwebhookconfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: example-mutatingwebhookconfiguration
webhooks:
- name: "example.mutatingwebhookconfiguration.com"
  failurePolicy: Ignore
  clientConfig:
    service:
      name: apple-service
      namespace: apples
      path: /apple
    caBundle: "YXBwbGVz"
  admissionReviewVersions: ["v1", "v1beta1"]
  sideEffects: None
  timeoutSeconds: 5
  namespaceSelector:
    matchExpressions:
    - key: production
      operator: DoesNotExist
  rules:
  - apiGroups:
    - ""
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - pods
