tests/manifests/networkpolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow
spec:
  podSelector:
    matchLabels:
      app: fooApp
      role: api
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app: fooApp
