tests/manifests/validatingadmissionpolicybinding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: example-validatingadmissionpolicybinding
spec:
  policyName: example-validatingadmissionpolicy
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        environment: prod
